# venom

./: .clang-format  .gitignore  .gitmodules  BUILD.md  CMakeLists.txt  LICENSE  README.md  RESOURCES.md  build.bat  build.sh  configure.py  venomConfig.cmake.in
cmake/: find_avx.cmake  target_options.cmake  utils.cmake
include/venom/: ast.h  lexer.h  sema.h  symtable.h  type.h  venom.h
scripts/: clang_format_all.bat  clang_format_all.sh
src/: CMakeLists.txt  ast.c  dll_main.c  dll_main.cpp  lexer.c  main.c  symtable.c  type.c
tests/: CMakeLists.txt  test_all.py  test_arithmetic.py  test_ast.c  test_func_jit.py  test_lexer.c  test_module_jit.py  test_symtable.c
tests/data/: test_module.py
tests_data/: test1.py
venom/: __init__.py  _builtin.py  _compiler.py  _error.py  _execmem.py  _ir.py  _jit.py  _log.py  _op.py  _symbols.py  _symtable.py  _type.py
